Correcciones Ing. Gustavo Giori

--- a/Informe Final/Capitulo1.tex
+++ b/Informe Final/Capitulo1.tex
@@ -10,7 +10,7 @@ Esta documentación surgió a partir de sucesivas versiones del mismo que fueron
 \section{Objetivos}
 \subsection{Generales}
 \paragraph\indent
-Con respecto al trabajo de graduación, el objetivo principal poner en práctica todos los conocimientos y habilidades adquiridas durante el transcurso de la carrera, mediante la construcción de un producto de software que satisfaga las necesidades y genere valor agregado a un cliente determinado.
+Con respecto al trabajo de graduación, el objetivo principal es desarrollar el sistema de gestión para una mueblería, poniendo en práctica todos los conocimientos y habilidades adquiridas durante el transcurso de la carrera.
 
 \subsection{Específicos}
 \begin{itemize}
