--- a/Informe Final/Capitulo9.tex
+++ b/Informe Final/Capitulo9.tex
@@ -3,16 +3,16 @@
 \markboth{CAPÍTULO \ref*{ch:capitulo9}. Bibliografía}{CAPÍTULO \ref*{ch:capitulo9}. Bibliografía}
 
 \begin{enumerate}
-	\item Documentación oficial de Golang. \url{https://golang.org/doc/}
-	\item Documentación oficial de MySQL. \url{https://dev.mysql.com/}
-	\item Documentación oficial de Dart. \url{https://dart.dev/guides}
-	\item Documentación oficial de Flutter. \url{https://flutter.dev/docs}
-	\item Documentación oficial de Echo. \url{https://echo.labstack.com/guide}
-	\item Documentación oficial de Compute Engine - GCP. \url{https://cloud.google.com/compute/docs}
-	\item Documentación oficial de Git. \url{https://git-scm.com/doc}
-	\item Documentación oficial de PlantUML. \url{https://plantuml.com/es/}
-	\item Documentación oficial de ApiDoc. \url{https://apidocjs.com/}
-	\item Foro de ayuda de Latex. \url{https://tex.stackexchange.com/}
-	\item Guía básica de Latex. \url{http://minisconlatex.blogspot.com/}
-	\item Apuntes de clase de Ingeniería de Software I.
+	\item Documentación oficial de Golang - \url{https://golang.org/doc/} - 01/06/2020
+	\item Documentación oficial de MySQL. - \url{https://dev.mysql.com/} - 05/05/2020
+	\item Documentación oficial de Dart. - \url{https://dart.dev/guides} - 01/06/2020
+	\item Documentación oficial de Flutter. - \url{https://flutter.dev/docs} - 01/06/2020
+	\item Documentación oficial de Echo. - \url{https://echo.labstack.com/guide} - 01/06/2020
+	\item Documentación oficial de Compute Engine/GCP. - \url{https://cloud.google.com/compute/docs} - 05/05/2020
+	\item Documentación oficial de Git. - \url{https://git-scm.com/doc} - 01/02/2020
+	\item Documentación oficial de PlantUML. - \url{https://plantuml.com/es/} - 01/03/2020
+	\item Documentación oficial de ApiDoc. - \url{https://apidocjs.com/} - 01/06/2020
+	\item Foro de ayuda de Latex. - \url{https://tex.stackexchange.com/} - 01/02/2020
+	\item Guía básica de Latex. - \url{http://minisconlatex.blogspot.com/} - 01/02/2020
+	\item Apuntes de clase de Ingeniería de Software I. - 01/02/2020
 \end{enumerate}
