--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/buscarAvanzadoEmpleados.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/buscarAvanzadoEmpleados.tex
@@ -5,7 +5,7 @@
 \renewcommand{\caseUseModified}{27/01/2020} %Fecha modificación
 \renewcommand{\caseUseName}{\CUbuscarAvanzadoEmpleados - Buscar avanzado empleados} %{\CUcammelCase - Title}
 
-\renewcommand{\caseUseSummary}{Este caso de uso permite a los administradores buscar empleados a partir de sus nombres, apellidos, nombre de usuario, correo electrónico, número de documento, número de telefono, estado civil, si tiene o no hijos, rol, rango de fechas de inicio de actividad laboral y estado.} %Resumen
+\renewcommand{\caseUseSummary}{Este caso de uso permite a los administradores buscar empleados a partir de sus nombres, apellidos, nombre de usuario, correo electrónico, número de documento, número de teléfono, estado civil, si tiene o no hijos, rol, rango de fechas de inicio de actividad laboral y estado.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere encontrar un empleado existente en el sistema.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
 	\caseUseRow{Haber iniciado sesión en el sistema y tener el permiso necesario para realizar esta función.} %Precondiciones
@@ -15,9 +15,9 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador accede a la pantalla para realizar la búsqueda de empleados.}
-    \addCaseUseStep{ZMGestion muestra un formulario para que el usuario realice la búsqueda mediante un único campo o bien ingrese nombres, apellidos, nombre de usuario, correo electrónico, número de documento, número de telefono, estado civil, si tiene o no hijos, rol, rango de fechas de inicio de actividad laboral o estado.}
+    \addCaseUseStep{ZMGestion muestra un formulario para que el usuario realice la búsqueda mediante un único campo o bien ingrese nombres, apellidos, nombre de usuario, correo electrónico, número de documento, número de teléfono, estado civil, si tiene o no hijos, rol, rango de fechas de inicio de actividad laboral o estado.}
     \addCaseUseStep{El administrador ingresa los campos solicitados.}%3
-    \addCaseUseStep{ZMGestion realiza la busqueda por nombres, apellidos, nombre de usuario, correo electrónico, número de documento, número de telefono, estado civil, si tiene o no hijos, rol, rango de fechas de inicio de actividad laboral y estado.}
+    \addCaseUseStep{ZMGestion realiza la búsqueda por nombres, apellidos, nombre de usuario, correo electrónico, número de documento, número de teléfono, estado civil, si tiene o no hijos, rol, rango de fechas de inicio de actividad laboral y estado.}
     \addCaseUseStep{ZMGestion lista las coincidencias encontradas.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
