--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/buscarAvanzadoOrdenesProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/buscarAvanzadoOrdenesProduccion.tex
@@ -16,7 +16,7 @@
     \addCaseUseStep{El fabricante accede a la pantalla para realizar la búsqueda de órdenes de producción.}
     \addCaseUseStep{ZMGestion muestra un formulario para que el fabricante seleccione un producto, tela, lustre y estado de la orden de producción. Siendo opcionales todos los campos solicitados.}
     \addCaseUseStep{El fabricante completa los campos solicitados.}
-    \addCaseUseStep{ZMGestion realiza la busqueda por producto, tela, lustre y estado de la orden de producción.}
+    \addCaseUseStep{ZMGestion realiza la búsqueda por producto, tela, lustre y estado de la orden de producción.}
     \addCaseUseStep{ZMGestion lista las coincidencias encontradas.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
