--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/buscarAvanzadoPresupuestos.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/buscarAvanzadoPresupuestos.tex
@@ -17,7 +17,7 @@
     \addCaseUseStep{ El vendedor accede a la pantalla para realizar la búsqueda de presupuestos.}
     \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor seleccione un cliente, producto, tela, lustre y estado del presupuesto. Siendo opcionales todos los campos solicitados.}
     \addCaseUseStep{El vendedor completa los campos solicitados.}
-    \addCaseUseStep{ZMGestion realiza la busqueda por cliente, producto, tela, lustre y estado del presupuesto.}
+    \addCaseUseStep{ZMGestion realiza la búsqueda por cliente, producto, tela, lustre y estado del presupuesto.}
     \addCaseUseStep{ZMGestion lista las coincidencias encontradas.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
