--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/crearProducto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/crearProducto.tex
@@ -20,9 +20,9 @@
     \addCaseUseStep{ZMGestion crea al producto con los campos ingresados por el usuario y muestra un mensaje indicando el éxito de la operación. }
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
-	\newAlternative{A1: El nombre del producto ingresado, la categoria y grupo seleccionado ya existe.}{3} %Flujo alternativo A1.
+	\newAlternative{A1: El nombre del producto ingresado, la categoría y grupo seleccionado ya existe.}{3} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que el nombre del producto ya esta en uso para el grupo y categoria seleccionado.}
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que el nombre del producto ya está en uso para el grupo y categoría seleccionado.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
 
