--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/buscarAvanzadoRemitos.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/buscarAvanzadoRemitos.tex
@@ -16,7 +16,7 @@
     \addCaseUseStep{ El vendedor accede a la pantalla para realizar la búsqueda de remitos.}
     \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor seleccione un producto, tipo de remito, venta, cliente, un rango de fecha en la que se entregó o se creó el remito, ubicación, domicilio y estado. Siendo opcionales todos los campos.}
     \addCaseUseStep{El vendedor completa los campos solicitados.}
-    \addCaseUseStep{ZMGestion realiza la busqueda producto, tipo de remito, venta, cliente, rango de fecha en la que se entregó o se creó el remito, ubicación, domicilio y estado.}
+    \addCaseUseStep{ZMGestion realiza la búsqueda producto, tipo de remito, venta, cliente, rango de fecha en la que se entregó o se creó el remito, ubicación, domicilio y estado.}
     \addCaseUseStep{ZMGestion lista las coincidencias encontradas.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
