--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/crearRemito.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionRemitos/crearRemito.tex
@@ -27,7 +27,7 @@
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
     
-    \newAlternative{A2: No se ha agregado ningúna línea de remito.}{4} %Flujo alternativo A1.
+    \newAlternative{A2: No se ha agregado ninguna línea de remito.}{4} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 4 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que debe agregar al menos una línea de remito.}
     \caseUseRow{El escenario vuelve al punto 4.}
