--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionUbicaciones/listarUbicaciones.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionUbicaciones/listarUbicaciones.tex
@@ -18,9 +18,9 @@
     \addCaseUseStep{ZMGestion muestra una lista con todas las ubicaciones existentes.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
-	\newAlternative{A1: No existe ningúna ubicación.}{2} %Flujo alternativo A1.
+	\newAlternative{A1: No existe ninguna ubicación.}{2} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 2 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no existe ningúna ubicación.}
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no existe ninguna ubicación.}
     \caseUseRow{}
 }
 
