--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/buscarAvanzadoVentas.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/buscarAvanzadoVentas.tex
@@ -16,7 +16,7 @@
     \addCaseUseStep{ El vendedor accede a la pantalla para realizar la búsqueda de ventas.}
     \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor seleccione un cliente, producto, tela, lustre y estado de la venta. Siendo opcionales todos los campos solicitados.}
     \addCaseUseStep{El vendedor completa los campos solicitados.}
-    \addCaseUseStep{ZMGestion realiza la busqueda por cliente, producto, tela, lustre y estado de la venta.}
+    \addCaseUseStep{ZMGestion realiza la búsqueda por cliente, producto, tela, lustre y estado de la venta.}
     \addCaseUseStep{ZMGestion lista las coincidencias encontradas.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
