--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/modificarVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/modificarVenta.tex
@@ -37,7 +37,7 @@
     \alternativeRow{ZMGestion muestra un mensaje informando que no puede modificar la venta de otro vendedor.}
     \caseUseRow{El escenario vuelve al punto 1.}
     \caseUseRow{}
-    \newAlternative{A4: La venta no posee ningúna linea de venta.}{4} %Flujo alternativo A3.
+    \newAlternative{A4: La venta no posee ninguna linea de venta.}{4} %Flujo alternativo A3.
 	\caseUseRow{La secuencia A4 comienza luego del punto 4 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que la venta debe tener al menos una linea de venta.}
     \caseUseRow{El escenario vuelve al punto 5.}
