--- a/Informe Final/Capitulos/Capitulo4/CasosUso/Sesiones/iniciarSesion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/Sesiones/iniciarSesion.tex
@@ -30,13 +30,13 @@
 	\caseUseRow{El escenario vuelve al punto 2.}
 	\caseUseRow{}
 
-	\newAlternative{A3: La contraseña ingresada es incorrecta y el número de intentos no supero el limite permitido.}{3}
+	\newAlternative{A3: La contraseña ingresada es incorrecta y el número de intentos no supero el límite permitido.}{3}
 	\caseUseRow{La secuencia A3 comienza luego del punto 3 del escenario principal.}
 	\alternativeRow{ZMGestion informa al usuario que la contraseña ingresada es incorrecta.}
 	\caseUseRow{El escenario vuelve al punto 2.}
 	\caseUseRow{}
 
-	\newAlternative{A4: La contraseña ingresada es incorrecta y el número de intentos supero el limite permitido.}{3}
+	\newAlternative{A4: La contraseña ingresada es incorrecta y el número de intentos supero el límite permitido.}{3}
 	\caseUseRow{La secuencia A4 comienza luego del punto 3 del escenario principal.}
 	\alternativeRow{ZMGestion informa al usuario que la contraseña es incorrecta, que el usuario ha sido ha sido dado de baja y que debe comunicarse con un administrador.}
 	\caseUseRow{El escenario vuelve al punto 2.}
