--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -180,7 +180,6 @@
 			\itemCaseUse{listarLineasOrdenProduccion}{Listar lineas de orden de producción}
 			\itemCaseUse{borrarOrdenProduccion}{Borrar orden de producción}
 			\itemCaseUse{cancelarOrdenProduccion}{Cancelar orden de producción}
-		
 			\itemCaseUse{listarTareasLineaOrdenProduccion}{Listar tareas de línea de orden de producción}
 		\end{itemize}
 		\item Gestión líneas de órdenes de producción
@@ -191,7 +190,8 @@
 			\itemCaseUse{verificarLineaOrdenProduccion}{Verificar línea de orden de producción}
 			\itemCaseUse{cancelarLineaOrdenProduccion}{Cancelar línea de orden de producción}	
 			\itemCaseUse{reanudarLineaOrdenProduccion}{Reanudar línea de orden de producción}		
-		\end{itemize}s
+		\end{itemize}
+		\clearpage
 		\item Gestión observaciones
 		\begin{itemize}
 			\itemCaseUse{crearObservacion}{Crear observación}
@@ -232,7 +232,7 @@
 	\begin{figure}[H]
 		\centering
 		\includegraphics[width=\textwidth,height=0.90\textheight,keepaspectratio]{ModeladoDeCasosDeUso/DiagramaDeCasosDeUso/GestionArticulosVenta}
-		\caption{Diagrama de casos de uso para la gestión de articulos de venta}
+		\caption{Diagrama de casos de uso para la gestión de artículos de venta}
 	\label{fig:GestionArticulosVenta}
 	\end{figure}
     \begin{figure}[H]
