--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionDomicilios/crearDomicilio.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionDomicilios/crearDomicilio.tex
@@ -19,7 +19,7 @@
     \addCaseUseStep{ZMGestion crea el domicilio para el cliente seleccionado por el vendedor.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
-    \newAlternative{A1: El vendedor ha dejado un campo obligatorio vacio.}{3} %Flujo alternativo A1.
+    \newAlternative{A1: El vendedor ha dejado un campo obligatorio vacío.}{3} %Flujo alternativo A1.
     \caseUseRow{La secuencia A1 comienza luego del punto 3 del escenario principal.}%¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que dicho campo es requerido.}
     \caseUseRow{El escenario vuelve al punto 2.}
