--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/crearEmpleado.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/crearEmpleado.tex
@@ -15,7 +15,7 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador accede a la pantalla para crear empleados}
-    \addCaseUseStep{ZMGestion muestra un formulario para que el usuario ingrese: Nombres, apellidos, correo electrónico, número de teléfono, nombre de usuario, contraseña, fecha de inicio de actividad laboral, cantidad de hijos, estado civil, tipo de documento, documento, teléfono, fecha de nacimiento, rol del empleado que desea agregar y su ubicación en la cual desempeñara su tarea. Indicando que son requeridos todos los campos.}
+    \addCaseUseStep{ZMGestion muestra un formulario para que el usuario ingrese: Nombres, apellidos, correo electrónico, número de teléfono, nombre de usuario, contraseña, fecha de inicio de actividad laboral, cantidad de hijos, estado civil, tipo de documento, documento, teléfono, fecha de nacimiento, rol del empleado que desea agregar y su ubicación en la cual desempeñará su tarea. Indicando que son requeridos todos los campos.}
     \addCaseUseStep{El administrador completa los campos del formulario.}
     \addCaseUseStep{ZMGestion crea el empleado con los campos ingresados por el usuario y muestra un mensaje indicando el éxito de la operación.}
 }
@@ -35,7 +35,7 @@
     \alternativeRow{ZMGestion muestra un mensaje de error informando que el documento y tipo de documento ya existe.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
-    \newAlternative{A4: El usuario ha dejado un campo requerido vacio.}{3} %Flujo alternativo A3.
+    \newAlternative{A4: El usuario ha dejado un campo requerido vacío.}{3} %Flujo alternativo A3.
 	\caseUseRow{La secuencia A4 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion informa al usuario que dicho campo es requerido.}
     \caseUseRow{El escenario vuelve al punto 2.}
