--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/modificarEmpleado.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/modificarEmpleado.tex
@@ -40,7 +40,7 @@
     \alternativeRow{ZMGestion cierra la sesión del usuario que se está modificando.}
     \caseUseRow{El escenario continúa desde el punto 4.}
     \caseUseRow{}
-    \newAlternative{A5: El usuario ha dejado un campo requerido vacio.}{3} %Flujo alternativo A3.
+    \newAlternative{A5: El usuario ha dejado un campo requerido vacío.}{3} %Flujo alternativo A3.
 	\caseUseRow{La secuencia A5 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion informa al usuario que dicho campo es requerido.}
     \caseUseRow{El escenario vuelve al punto 2.}
