--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/modificarLineaOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/modificarLineaOrdenProduccion.tex
@@ -45,9 +45,9 @@
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
 
-    \newAlternative{A5: El administrador ha dejado un campo obligatorio vacio.}{3} %Flujo alternativo A1.
+    \newAlternative{A5: El administrador ha dejado un campo obligatorio vacío.}{3} %Flujo alternativo A1.
     \caseUseRow{La secuencia A5 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que ha dejado un campo obligatorio vacio.}
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que ha dejado un campo obligatorio vacío.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
 }
