--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasRemito/crearLineaRemito.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasRemito/crearLineaRemito.tex
@@ -10,7 +10,7 @@
 	\caseUseRow{Estar ejecutando el \CUcrearRemito (Crear remito).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
-	\caseUseRow{Ningúna.} %Postcondiciones
+	\caseUseRow{Ninguna.} %Postcondiciones
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El vendedor desea agregar una linea de remito a un determinado remito.}
@@ -29,7 +29,7 @@
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que la combinación de producto, tela y lustre ya se encuentra en el remito.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
-    \newAlternative{A3: El vendedor ha dejado un campo obligatorio vacio.}{3} %Flujo alternativo A2.
+    \newAlternative{A3: El vendedor ha dejado un campo obligatorio vacío.}{3} %Flujo alternativo A2.
     \caseUseRow{La secuencia A3 comienza luego del punto 3 del escenario principal.}%¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que dicho campo es requerido.}
     \caseUseRow{El escenario vuelve al punto 2.}
