--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTelas/crearTela.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTelas/crearTela.tex
@@ -30,7 +30,7 @@
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que el precio no puede ser menor o igual que cero.}
     \caseUseRow{EL escenario vuelve al punto 2.}
     \caseUseRow{}
-    \newAlternative{A3:El administrador ha dejado un campo obligatorio vacio.}{3} %Flujo alternativo A2.
+    \newAlternative{A3:El administrador ha dejado un campo obligatorio vacío.}{3} %Flujo alternativo A2.
     \caseUseRow{La secuencia A3 comienza luego del punto 3 del escenario principal.}%¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que dicho campo es requerido.}
     \caseUseRow{EL escenario vuelve al punto 2.}
