--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTelas/modificarTela.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTelas/modificarTela.tex
@@ -33,7 +33,7 @@
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
 
-    \newAlternative{A4: El administrador ha dejado un campo requerido vacio.}{3} %Flujo alternativo A3.
+    \newAlternative{A4: El administrador ha dejado un campo requerido vacío.}{3} %Flujo alternativo A3.
 	\caseUseRow{La secuencia A4 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que dicho campo es requerido.}
     \caseUseRow{El escenario vuelve al punto 2.}
